force-app/main/default/objects/VAT__c/fields/Vat__c.field-meta.xml
<CustomField>
    <fullName>Vat__c</fullName>
    <label>Vat %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>