force-app/main/default/objects/VAT__c/fields/VAT_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>VAT_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VAT GL Account</label>
    <referenceTo>AR_GL_Account__c</referenceTo>
    <relationshipLabel>VAT</relationshipLabel>
    <relationshipName>VAT</relationshipName>
    <type>Lookup</type>
</CustomField>