force-app/main/default/objects/VAT__c/fields/VAT_Transaction__c.field-meta.xml
<CustomField>
    <fullName>VAT_Transaction__c</fullName>
    <label>VAT Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>